# dx7

./: .gitignore  Cargo.toml  README.md
demo/: jr-sh1-1.mid
dx7-app/: Cargo.toml
dx7-app/examples/: ep_compare.rs  gen_gm_rom.rs  gm_audit.rs  gm_compare.rs  list_patches.rs  midi_dump.rs  midi_extract.rs  midi_programs.rs  midi_velocity.rs
dx7-app/src/: audio.rs  gm.rs  gm_rom.rs  keyboard.rs  main.rs  midi.rs  rtpmidi.rs
dx7-app/src/bluetooth/: linux.rs  macos.rs  mod.rs
dx7-core/: Cargo.toml
dx7-core/src/: algorithm.rs  effects.rs  envelope.rs  generated_tables.rs  gm_rom.rs  lfo.rs  lib.rs  operator.rs  patch.rs  pitchenv.rs  preset.rs  rom1a.rs  synth.rs  tables.rs  voice.rs
dx7-core/tests/: dexed_cmp.rs  dump_epiano.rs  signal_chain.rs
dx7-esp32s3/: Cargo.toml  README.md  run.sh
dx7-esp32s3/.cargo/: config.toml
dx7-esp32s3/src/: es8311.rs  main.rs
dx7-rp2350/: Cargo.toml  build.rs
dx7-rp2350/src/: main.rs
dx7-rpi/: Cargo.toml  README.md  build.rs  memory.x
dx7-rpi/.cargo/: config.toml
dx7-rpi/src/: main.rs
