[package]
name = "dx7-rp2350"
version = "0.1.0"
edition = "2021"

[dependencies]
dx7-core = { path = "../dx7-core", default-features = false }
dx7-midi = { path = "../dx7-midi" }
embassy-rp = { version = "0.9", features = ["rp235xa", "time-driver", "critical-section-impl"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
embassy-time = "0.5"
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-usb = { version = "0.5", optional = true }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-alloc = "0.6"
static_cell = "2.1"
embassy-hal-internal = "0.3"
fixed = { version = "1.28", optional = true }

# BLE MIDI
cyw43 = { version = "0.6", features = ["defmt", "bluetooth"], optional = true }
cyw43-pio = { version = "0.9", features = ["defmt"], optional = true }
trouble-host = { version = "0.5", default-features = false, features = ["peripheral", "gatt", "derive", "default-packet-pool"], optional = true }

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[features]
pwm = []
i2s = ["dep:fixed"]
usb-midi = ["dep:embassy-usb"]
ble-midi = ["dep:cyw43", "dep:cyw43-pio", "dep:trouble-host", "dep:reqwest", "dep:fixed"]
uart-midi = []

[profile.release]
opt-level = 3
lto = true
strip = true
